<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity" >
    <!--tools:showIn="@layout/app_bar_main"-->


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/banner_gym" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="6dp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:visibility="visible">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="160dp"
                        android:layout_height="160dp"
                        android:contentDescription="@string/app_name"
                        app:srcCompat="@drawable/head"
                        tools:srcCompat="@drawable/head" />

                    <LinearLayout
                        android:layout_width="263dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="250dp"
                            android:layout_height="wrap_content"
                            android:background="@color/colorAccent"
                            android:gravity="center"
                            android:text="阶段性目标"
                            android:textAllCaps="false"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:fontFamily="sans-serif"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="125dp"
                                android:layout_height="match_parent"
                                android:orientation="vertical">

                                <CheckBox
                                    android:id="@+id/checkBox"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/check_1" />

                                <CheckBox
                                    android:id="@+id/checkBox2"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/check_2" />

                                <CheckBox
                                    android:id="@+id/checkBox3"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/check_3" />

                                <CheckBox
                                    android:id="@+id/checkBox4"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/check_4" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="125dp"
                                android:layout_height="match_parent"
                                android:orientation="vertical">

                                <CheckBox
                                    android:id="@+id/checkbox5"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/check_5" />

                                <CheckBox
                                    android:id="@+id/checkBox6"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/check_6" />

                                <CheckBox
                                    android:id="@+id/checkbox7"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/check_7" />

                                <CheckBox
                                    android:id="@+id/checkBox8"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/check_8" />
                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/imageButton1"
                        android:layout_width="0dp"
                        android:layout_height="120dp"
                        android:layout_weight="1"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/sport1" />

                    <ImageButton
                        android:id="@+id/imageButton2"
                        android:layout_width="0dp"
                        android:layout_height="120dp"
                        android:layout_weight="1"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/sport2" />

                    <ImageButton
                        android:id="@+id/imageButton3"
                        android:layout_width="0dp"
                        android:layout_height="120dp"
                        android:layout_weight="1"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/sport3" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:id="@+id/imageButton4"
                        android:layout_width="0dp"
                        android:layout_height="120dp"
                        android:layout_weight="1"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/sport4" />

                    <ImageButton
                        android:id="@+id/imageButton5"
                        android:layout_width="0dp"
                        android:layout_height="120dp"
                        android:layout_weight="1"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/sport5" />

                    <ImageButton
                        android:id="@+id/imageButton6"
                        android:layout_width="0dp"
                        android:layout_height="120dp"
                        android:layout_weight="1"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/sport6" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:id="@+id/imageButton7"
                        android:layout_width="0dp"
                        android:layout_height="120dp"
                        android:layout_weight="1"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/sport7" />

                    <ImageButton
                        android:id="@+id/imageButton8"
                        android:layout_width="0dp"
                        android:layout_height="120dp"
                        android:layout_weight="1"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/sport8" />

                    <ImageButton
                        android:id="@+id/imageButton9"
                        android:layout_width="0dp"
                        android:layout_height="120dp"
                        android:layout_weight="1"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/sport9" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>